--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "February 9, 2018. Amy Churchwell, Epicodus.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
